# misis2023f-22-01-anikin-d-a

./: CMakeLists.txt  README.md  codeforces.id  status.md
docs/: report.md  test.txt
prj.codeforces/: 0041a.cpp  0050a.cpp  0059a.cpp  0110a.cpp  0112a.cpp  0116a.cpp  0158a.cpp  0231a.cpp  0236a.cpp  0266a.cpp  0282a.cpp  0339a.cpp  0467a.cpp  0546a.cpp  0734a.cpp  0791a.cpp  0977a.cpp  1030a.cpp  1328a.cpp  1335a.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  main.cpp
prj.cw/nifti_lib/: CMakeLists.txt  library.cpp  library.h
