add_executable(0282a 0282a.cpp)
add_executable(0467a 0467a.cpp)
add_executable(0546a 0546a.cpp)
add_executable(0791a 0791a.cpp)
add_executable(0977a 0977a.cpp)
add_executable(1030a 1030a.cpp)
add_executable(1328a 1328a.cpp)
add_executable(1335a 1335a.cpp)
add_executable(0231a 0231a.cpp)
add_executable(0158a 0158a.cpp)
add_executable(0050a 0050a.cpp)
add_executable(0112a 0112a.cpp)
add_executable(0339a 0339a.cpp)
add_executable(0236a 0236a.cpp)
add_executable(0266a 0266a.cpp)
add_executable(0059a 0059a.cpp)
add_executable(0110a 0110a.cpp)
add_executable(0734a 0734a.cpp)
add_executable(0041a 0041a.cpp)
add_executable(0116a 0116a.cpp)
